--- a/scss/_imagevars.scss
+++ b/scss/_imagevars.scss
@@ -5,6 +5,10 @@ $red_border: url('../images/border_red.png');
 $green_border: url('../images/border_green.png');
 $purple_border: url('../images/border_purple.png');
 $button_border: url('../images/button_border.png');
+
+$border_hbrackets: url('../images/border_hbrackets.png');
+
+$border_test: url('../images/border_test.png');
 // Background Tiles
 $dark_tile: url('../images/dark_tile.png');
 $light_tile: url('../images/light_tile.png');
