--- a/scss/_borders.scss
+++ b/scss/_borders.scss
@@ -1,6 +1,6 @@
 // ~~~~~~~~~~ Mixin Delcarations ~~~~~~~~~~
 @mixin standard_border($color){
-    border: 2px solid $color;
+    border: 1px solid $color;
 }
 @mixin article_border($color){
     border: 4px solid $color;
@@ -8,6 +8,10 @@
 @mixin image_border($image){
     border: 24px solid transparent;
     border-image: $image 24 stretch;
+}
+@mixin test_border($image){
+    border: 12px solid transparent;
+    border-image: $image 12 round;
 }
 @mixin button_border{
     border: 8px solid transparent;
