--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -13,21 +13,23 @@ html{
 // ~~~~~~~~~~Article Elements~~~~~~~~~~
 
 article{
+    background-color: $white;
+    border: 4px solid $lpurple;
+    box-shadow: 4px 4px 8px $nearblack inset;
     display: flex;
     flex-direction: column;
-    width: 800px;
-    margin: 10px auto 10px auto;
-    padding: 0.5em;
-    @include standard_border($lpurple);
-    @include light_shadow;
-    background-image: $dither_black;
+    @include size(lg){
+        width: 800px;
+        margin: 10px auto 10px auto;
+        padding: 1em;
+    }
+    @include size(sm){
+        margin: 4px;
+    }
+    // @include standard_border($lpurple);
+    // background-image: $dither_black;
     position: relative;
-    &:nth-child(odd){
-        right: 2rem;
-    }
-    &:nth-child(even){
-        left: 2rem;
-    }
+    
 
     // ~~~~~~~~~~Section~~~~~~~~~~
     section.header{
@@ -36,6 +38,9 @@ article{
         justify-content: space-between;
         padding: 1em 1em 0.5em 1em;
         z-index: 20;
+        @include background_animation_reverse($purple_tile, 5s);
+        @include test_border($border_hbrackets);
+        margin: 20px;
         h2{
             color: $white;
             margin: 0, 0, 0.25em, 0.5em;
@@ -55,17 +60,26 @@ article{
             z-index: 25;
             transform: translateY(-6px);
         }
-        @include background_animation_reverse($purple_tile, 5s);
-        @include standard_border($white);
     }
     section.body{
-        margin: 0 2em 1em 2em;
+        @include size(lg){
+            margin: 0 2em 1em 2em;
+            padding: 8px;
+        }
+        @include size(sm){
+            margin: 4px 12px 4px 12px;
+            padding: 4px;
+        }
         transform: translateY(-6px);
-        background-color: $black;
-        padding: 8px;
-        @include standard_border($white);
-        @include color_shadow($white);
+        background-color: $white;
+        color: $white;
+        @include test_border($border_test);
+        box-shadow: 0px 0px 20px $nearblack;
         z-index: 15;
+        p{
+            margin: 0 0 12px 0;
+            text-align: justify;
+        }
     }
 
     // For single-article pages
@@ -73,7 +87,6 @@ article{
         left: 0;
         right: 0;
         @include standard_border($main);
-        @include color_shadow($mdark);
     }
 }
 
@@ -121,6 +134,7 @@ article.list{
             }
             p{
                 margin: 4px;
+                color: $white;
             }
         }
     }
@@ -145,6 +159,9 @@ article.list{
                     padding: 4px;
                     border: 1px solid $white;
                 }
+                p{
+                    color: $white;
+                }
             }
         }
     }
@@ -154,6 +171,8 @@ article.cms{
     padding: 0;
     background-color: $red;
     background-image: none;
+    @include image_border($purple_border);
+    margin-top: 36px;
 }
 
 // Styles for list page wrapper
