Categories! And style changes
I added proper functionality for categories, as their own separate table, with a drop-down menu in the post add/edit page. Also reworked the styles, looking a lot better now!

--- a/scss/_borders.scss
+++ b/scss/_borders.scss
@@ -9,7 +9,7 @@
     border: 24px solid transparent;
     border-image: $image 24 stretch;
 }
-@mixin test_border($image){
+@mixin bracket_border($image){
     border: 12px solid transparent;
     border-image: $image 12 round;
 }
