--- a/scss/_imagevars.scss
+++ b/scss/_imagevars.scss
@@ -6,7 +6,16 @@ $green_border: url('../images/border_green.png');
 $purple_border: url('../images/border_purple.png');
 $button_border: url('../images/button_border.png');
 
-$border_hbrackets: url('../images/border_hbrackets.png');
+$border_hbrackets: url('../images/horz_brackets.png');
+$border_hbrackets_main: url('../images/horz_brackets_main.png');
+$border_hbrackets_purple: url('../images/horz_brackets_purple.png');
+$border_hbrackets_red: url('../images/horz_brackets_red.png');
+$border_hbrackets_white: url('../images/horz_brackets_white.png');
+$border_vbrackets: url('../images/vert_brackets.png');
+$border_vbrackets_main: url('../images/vert_brackets_main.png');
+$border_vbrackets_purple: url('../images/vert_brackets_purple.png');
+$border_vbrackets_red: url('../images/vert_brackets_red.png');
+$border_vbrackets_white: url('../images/vert_brackets_white.png');
 
 $border_test: url('../images/border_test.png');
 // Background Tiles
