--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -99,6 +99,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   background-color: #000;
   font-family: "Nixie One", cursive;
+  padding: 4px 0 4px 1em;
 }
 
 h1 {
@@ -109,13 +110,27 @@ h1 {
 
 h2 {
   font-size: 2.5em;
-  font-family: "Nixie One", cursive;
-  color: #fff;
+  border: 12px solid transparent;
+  border-image: url("../images/horz_brackets_red.png") 12 round;
+  margin: 8px 0 8px 0;
 }
 h2.article_header {
   text-shadow: 4px 4px 2px #9a93b7;
-  background-color: #000;
   padding: 8px;
+}
+
+h3 {
+  font-size: 2em;
+  border: 12px solid transparent;
+  border-image: url("../images/horz_brackets_main.png") 12 round;
+  margin: 8px 0 8px 0;
+}
+
+h4 {
+  font-size: 1.5em;
+  border: 12px solid transparent;
+  border-image: url("../images/horz_brackets_purple.png") 12 round;
+  margin: 8px 0 8px 0;
 }
 
 p {
@@ -143,6 +158,35 @@ pre {
 pre::selection {
   background-color: #a14d3f;
   color: #fff;
+}
+
+code {
+  color: #fff;
+  background-color: #404a68;
+  padding: 8px;
+  font-family: "Fira Mono", monospace;
+  font-size: 1em;
+}
+
+blockquote p {
+  padding: 24px;
+  margin: 4px 0 4px 0;
+  background-color: #524A2F;
+  color: #fff;
+  font-family: "Nixie One", cursive;
+  font-size: 2em;
+  font-style: italic;
+  border: 12px solid transparent;
+  border-image: url("../images/vert_brackets.png") 12 round;
+}
+
+hr {
+  width: 80%;
+  height: 4px;
+  margin: 12px auto 12px auto;
+  background-color: #221f31;
+  box-shadow: 0px 0px 10px #221f31;
+  border: 0 none;
 }
 
 a {
@@ -365,7 +409,7 @@ section.headline h1#title {
 article {
   background-color: #fff;
   border: 4px solid #9a93b7;
-  box-shadow: 4px 4px 8px #221f31 inset;
+  box-shadow: 4px 4px 12px #221f31 inset;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -392,7 +436,7 @@ article section.header {
   background-repeat: repeat;
   animation: moving_background_reverse 5s linear infinite;
   border: 12px solid transparent;
-  border-image: url("../images/border_hbrackets.png") 12 round;
+  border-image: url("../images/vert_brackets_purple.png") 12 round;
   margin: 20px;
 }
 article section.header h2 {
@@ -419,8 +463,8 @@ article section.body {
   background-color: #fff;
   color: #fff;
   border: 12px solid transparent;
-  border-image: url("../images/border_test.png") 12 round;
-  box-shadow: 0px 0px 20px #221f31;
+  border-image: url("../images/horz_brackets.png") 12 round;
+  box-shadow: 2px 2px 10px #221f31 inset;
   z-index: 15;
 }
 @media screen and (min-width: 801px) {
@@ -443,6 +487,12 @@ article.single {
   left: 0;
   right: 0;
   border: 1px solid #918454;
+}
+article.add_content {
+  width: 100%;
+  background-image: url("../images/pink_tile.png");
+  background-repeat: repeat;
+  animation: moving_background 15s linear infinite;
 }
 
 article.list {
@@ -540,8 +590,8 @@ article.cms {
   padding: 0;
   background-color: #a14d3f;
   background-image: none;
-  border: 24px solid transparent;
-  border-image: url("../images/border_purple.png") 24 stretch;
+  border: 12px solid transparent;
+  border-image: url("../images/vert_brackets_red.png") 12 round;
   margin-top: 36px;
 }
 
@@ -647,6 +697,10 @@ form.add_content label {
 }
 form.add_content input {
   width: 80%;
+}
+form.add_content {
+  max-width: 1200px;
+  background-color: #221f31;
 }
 
 html {
