--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -15,7 +15,7 @@ html{
 article{
     background-color: $white;
     border: 4px solid $lpurple;
-    box-shadow: 4px 4px 8px $nearblack inset;
+    box-shadow: 4px 4px 12px $nearblack inset;
     display: flex;
     flex-direction: column;
     @include size(lg){
@@ -39,7 +39,7 @@ article{
         padding: 1em 1em 0.5em 1em;
         z-index: 20;
         @include background_animation_reverse($purple_tile, 5s);
-        @include test_border($border_hbrackets);
+        @include bracket_border($border_vbrackets_purple);
         margin: 20px;
         h2{
             color: $white;
@@ -58,7 +58,7 @@ article{
             background-color: $black;
             border: 1px solid $white;
             z-index: 25;
-            transform: translateY(-6px);
+            transform: translateY(-12px);
         }
     }
     section.body{
@@ -73,8 +73,8 @@ article{
         transform: translateY(-6px);
         background-color: $white;
         color: $white;
-        @include test_border($border_test);
-        box-shadow: 0px 0px 20px $nearblack;
+        @include bracket_border($border_hbrackets);
+        box-shadow: 2px 2px 10px $nearblack inset;
         z-index: 15;
         p{
             margin: 0 0 12px 0;
@@ -87,6 +87,11 @@ article{
         left: 0;
         right: 0;
         @include standard_border($main);
+    }
+    // For the container article on the add_content page
+    &.add_content{
+        width: 100%;
+        @include background_animation($pink_tile, 15s);
     }
 }
 
@@ -171,7 +176,7 @@ article.cms{
     padding: 0;
     background-color: $red;
     background-image: none;
-    @include image_border($purple_border);
+    @include bracket_border($border_vbrackets_red);
     margin-top: 36px;
 }
 
