--- a/scss/_imagevars.scss
+++ b/scss/_imagevars.scss
@@ -26,6 +26,11 @@ $green_tile: url('../images/green_tile.png');
 $pink_tile: url('../images/pink_tile.png');
 $shiny_red_tile: url('../images/shiny_red_tile.png');
 $purple_tile: url('../images/purple_tile.png');
+$grid_tile: url('../images/grid_tile.png');
+$grid_tile_white: url('../images/grid_tile_white.png');
+$grid_tile_main: url('../images/grid_tile_main.png');
+$grid_tile_mdark: url('../images/grid_tile_mdark.png');
+$design_tile: url('../images/design_tile.png');
 
 $dither_white: url('../images/dither_white.png');
 $dither_black: url('../images/dither_black.png');
