--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -5,7 +5,7 @@ main{
     // background-color: $nearblack;
 }
 html{
-    @include background_animation($dark_tile, 10s);
+    @include background_animation($grid_tile_white, 10s);
 }
 
 @import 'header';
@@ -13,15 +13,14 @@ html{
 // ~~~~~~~~~~Article Elements~~~~~~~~~~
 
 article{
+    border: 1px solid $nearblack;
     background-color: $white;
-    border: 4px solid $lpurple;
-    box-shadow: 4px 4px 12px $nearblack inset;
     display: flex;
     flex-direction: column;
     @include size(lg){
         width: 800px;
         margin: 10px auto 10px auto;
-        padding: 1em;
+        @include standard_shadow;
     }
     @include size(sm){
         margin: 4px;
@@ -38,50 +37,58 @@ article{
         justify-content: space-between;
         padding: 1em 1em 0.5em 1em;
         z-index: 20;
-        @include background_animation_reverse($purple_tile, 5s);
-        @include bracket_border($border_vbrackets_purple);
-        margin: 20px;
+        background-color: $white;
+        @include bracket_border($border_vbrackets);
         h2{
-            color: $white;
-            margin: 0, 0, 0.25em, 0.5em;
+            color: $nearblack;
+            margin: 0;
             padding: 0.5em;
-            background-color: $black;
+            background-color: $white;
             border: 1px solid $white;
-            z-index: 50;
+            @include standard_border($nearblack);
         }
         p.byline{
             color: $white;
             font-size: 0.75em;
             @include font_code;
-            margin: 0 1em 0 1em;
+            margin: 0;
             padding: 4px;
             background-color: $black;
-            border: 1px solid $white;
-            z-index: 25;
-            transform: translateY(-12px);
-        }
-    }
-    section.body{
-        @include size(lg){
-            margin: 0 2em 1em 2em;
-            padding: 8px;
-        }
-        @include size(sm){
-            margin: 4px 12px 4px 12px;
-            padding: 4px;
-        }
-        transform: translateY(-6px);
-        background-color: $white;
-        color: $white;
-        @include bracket_border($border_hbrackets);
-        box-shadow: 2px 2px 10px $nearblack inset;
-        z-index: 15;
-        p{
-            margin: 0 0 12px 0;
-            text-align: justify;
+            @include standard_border($nearblack);
+            border-top: none;
         }
     }
 
+    div.body_wrapper{
+        @include background_animation($red_tile, 5s);
+        @include size(lg){
+            margin: 0 auto 1em auto;
+        }
+        @include size(sm){
+            margin: 0px auto 0px auto;
+            padding: 4px;
+        }
+        z-index: 25;
+        section.body{
+            max-width: 600px;
+            padding: 12px;
+            @include standard_border($black);
+            @include size(lg){
+                transform: translate(-12px, -12px);
+            }
+            @include size(sm){
+                transform: translate(-6px, -6px);
+            }
+            background-color: $white;
+            color: $white;
+            z-index: 25;
+            p{
+                margin: 0 0 12px 0;
+                text-align: left;
+            }
+        }
+    }
+    
     // For single-article pages
     &.single{
         left: 0;
@@ -184,7 +191,6 @@ article.cms{
 article.portfolio{
     margin: 1em auto 1em auto;
     width: 90%;
-    @include image_border($red_border);
     right: 0;
     left: 0;
     padding: 0;
