--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -12,8 +12,8 @@
 // ~~~~~~~~~~Basic Designations~~~~~~~~~~
 // ALL headings!!
 h1, h2, h3, h4, h5, h6{
-    color: $white;
-    background-color: $black;
+    color: $nearblack;
+    background-color: $white;
     @include font_deco;
     padding: 4px 0 4px 1em;
 }
@@ -44,7 +44,6 @@ h4{
 p{
     font-size: 1.25em;
     @include font_body;
-    @include text_shadow;
     color: $black;
 }
 strong{
@@ -74,8 +73,8 @@ code{
 blockquote p{
     padding: 24px;
     margin: 4px 0 4px 0;
-    background-color: $mdark;
-    color: $white;
+    background-color: transparent;
+    color: $mdark;
     @include font_deco;
     font-size: 2em;
     font-style: italic;
@@ -87,7 +86,6 @@ hr{
     height: 4px;
     margin: 12px auto 12px auto;
     background-color: $nearblack;
-    box-shadow: 0px 0px 10px $nearblack;
     border: 0 none;
     // @include bracket_border($border_hbrackets);
 }
@@ -100,6 +98,7 @@ a{
     text-shadow: 2px 2px 2px $lred;
     transition: color 200ms;
     background-color: $white;
+    border-bottom: 1px dotted $red;
 }
 a:hover, a:focus, a:focus-within{
     color: $nearblack;
