--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -96,8 +96,8 @@ select {
   }
 }
 h1, h2, h3, h4, h5, h6 {
-  color: #fff;
-  background-color: #000;
+  color: #221f31;
+  background-color: #fff;
   font-family: "Nixie One", cursive;
   padding: 4px 0 4px 1em;
 }
@@ -136,7 +136,6 @@ h4 {
 p {
   font-size: 1.25em;
   font-family: "Nanum Gothic Coding", serif;
-  text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.3);
   color: #000;
 }
 
@@ -171,8 +170,8 @@ code {
 blockquote p {
   padding: 24px;
   margin: 4px 0 4px 0;
-  background-color: #524A2F;
-  color: #fff;
+  background-color: transparent;
+  color: #524A2F;
   font-family: "Nixie One", cursive;
   font-size: 2em;
   font-style: italic;
@@ -185,7 +184,6 @@ hr {
   height: 4px;
   margin: 12px auto 12px auto;
   background-color: #221f31;
-  box-shadow: 0px 0px 10px #221f31;
   border: 0 none;
 }
 
@@ -195,6 +193,7 @@ a {
   text-shadow: 2px 2px 2px #ea9182;
   transition: color 200ms;
   background-color: #fff;
+  border-bottom: 1px dotted #a14d3f;
 }
 
 a:hover, a:focus, a:focus-within {
@@ -209,9 +208,14 @@ a:hover, a:focus, a:focus-within {
   color: #fff;
 }
 
+a::selection {
+  color: #678fcb;
+}
+
 main {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 html {
@@ -228,12 +232,9 @@ header nav {
 @media screen and (min-width: 801px) {
   header nav#horizontalnav {
     flex-direction: row;
-    width: 90%;
-    position: relative;
+    width: 100%;
+    position: absolute;
     margin: 0 auto 4px auto;
-  }
-  header nav#horizontalnav a img {
-    display: none;
   }
 }
 @media screen and (max-width: 800px) {
@@ -243,16 +244,14 @@ header nav {
 }
 header nav#adminnav {
   flex-direction: row;
-  width: 90%;
+  width: 100%;
   position: absolute;
   top: 65px;
-}
-header nav#adminnav a img {
-  display: none;
 }
 header nav#verticalnav {
   flex-direction: column;
   position: fixed;
+  top: 65px;
   z-index: 200;
   transition: transform 300ms;
 }
@@ -268,7 +267,7 @@ header nav#verticalnav {
 }
 @media screen and (min-width: 801px) {
   header nav#verticalnav {
-    transform: translate(-320px, -325px);
+    transform: translate(0px, -390px);
   }
   header nav#verticalnav.visible {
     transform: translate(0px, -325px);
@@ -277,14 +276,44 @@ header nav#verticalnav {
 }
 @media screen and (max-width: 800px) {
   header nav#verticalnav {
-    transform: translate(0px, -325px);
+    transform: translate(0px, -390px);
   }
 }
 header nav#verticalnav.show {
   transform: translate(0px, 0px);
   transition: transform 300ms;
 }
-header nav#verticalnav.show a#navbutton img {
+header nav#singlenav {
+  flex-direction: column;
+  position: fixed;
+  z-index: 200;
+  transition: transform 300ms;
+}
+@media screen and (min-width: 801px) {
+  header nav#singlenav {
+    width: 300px;
+  }
+}
+@media screen and (max-width: 800px) {
+  header nav#singlenav {
+    width: 100vw;
+  }
+}
+@media screen and (min-width: 801px) {
+  header nav#singlenav {
+    transform: translate(-325px, 0px);
+  }
+  header nav#singlenav.visible {
+    transform: translate(0px, 0px);
+    transition: transform 300ms;
+  }
+}
+@media screen and (max-width: 800px) {
+  header nav#singlenav {
+    transform: translate(0px, 0px);
+  }
+}
+header nav#singlenav.active a span.arrow {
   transform: rotate(-90deg);
   transition: transform 300ms;
 }
@@ -307,9 +336,11 @@ header nav a {
   font-size: 1.5em;
   height: 65px;
   background-color: #fff;
+  background-clip: padding-box;
   transition: background-color 200ms;
   border: 8px solid transparent;
   border-image: url("../images/button_border.png") 16 round;
+  padding-left: 12px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -318,107 +349,103 @@ header nav a {
 header nav a#navbutton {
   cursor: pointer;
 }
-header nav a#navbutton img {
+header nav a#navbutton span.arrow {
   transform: rotate(90deg);
   transition: transform 300ms;
+  text-shadow: none;
 }
 header nav a p {
   padding: 10px;
   color: #000;
   transition: color 200ms;
 }
-header nav a img {
-  display: block;
-  background-color: #fff;
-  transition: background-color 200ms;
-}
 header nav a:hover, header nav a:focus, header nav a:focus-within {
   background-color: #221f31;
   transition: background-color 200ms;
 }
-header nav a:hover p, header nav a:focus p, header nav a:focus-within p {
+header nav a:hover p, header nav a:hover span.arrow, header nav a:focus p, header nav a:focus span.arrow, header nav a:focus-within p, header nav a:focus-within span.arrow {
   color: #fff;
   transition: color 200ms;
-}
-header nav a:hover img, header nav a:focus img, header nav a:focus-within img {
-  background-color: #a14d3f;
-  transition: background-color 200ms;
 }
 
 #topbutton p {
   font-size: 1em;
 }
 
-section.page_headline {
-  background-image: url("../images/header_gravy.png");
-  background-position: center;
-  background-size: cover;
+section#header_image {
+  position: absolute;
+  top: 0;
+  z-index: -10;
+  border-bottom: 4px solid #000;
+  box-shadow: 0px 0px 40px #000;
+  background-color: #000;
 }
 @media screen and (min-width: 801px) {
-  section.page_headline {
-    border: 24px solid transparent;
-    border-image: url("../images/border_transparent.png") 24 stretch;
-    height: 45vw;
-    width: 90vw;
-    margin: 0 auto 1em auto;
+  section#header_image {
+    width: 100%;
+    height: 50vw;
   }
 }
 @media screen and (max-width: 800px) {
-  section.page_headline {
+  section#header_image {
     width: 100%;
     height: 50vh;
-    margin: 0;
+  }
+}
+section#header_image img.header {
+  object-fit: cover;
+}
+@media screen and (min-width: 801px) {
+  section#header_image img.header {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media screen and (max-width: 800px) {
+  section#header_image img.header {
+    height: 100%;
   }
 }
 
-section.headline {
-  background-image: url("../images/red_tile.png");
-  background-repeat: repeat;
-  animation: moving_background 10s linear infinite;
-  box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.3);
-  transition: box-shadow 500ms;
-  border: 1px solid #a14d3f;
+section#header_text {
+  background-color: #000;
   text-align: center;
-}
-section.headline:hover, section.headline:focus, section.headline:focus-within {
-  box-shadow: 8px 8px 0px rgba(0, 0, 0, 0.3);
-  transition: box-shadow 200ms;
+  padding: 0.25em;
+  box-shadow: 0px 0px 20px #221f31;
+  border: 12px solid transparent;
+  border-image: url("../images/vert_brackets_white.png") 12 round;
 }
 @media screen and (min-width: 801px) {
-  section.headline {
-    width: 90%;
-    margin: 0 auto 1em auto;
+  section#header_text {
+    margin-top: 50vh;
   }
 }
 @media screen and (max-width: 800px) {
-  section.headline {
-    width: 100%;
-    margin: 65px auto 0 auto;
+  section#header_text {
+    margin-top: 50vh;
   }
 }
-section.headline h1#title {
-  font-size: 2.5em;
+section#header_text h1 {
   color: #fff;
-  text-shadow: 4px 4px 0px #9a93b7;
-  background-color: #221f31;
-  border: 1px solid #a14d3f;
-  padding: 4px;
-  margin: 12px;
+  text-shadow: 4px 4px 1px #9a93b7;
+  padding: 0;
+  margin: 0 auto 0 auto;
+  background-color: transparent;
 }
 
 article {
+  border: 1px solid #221f31;
   background-color: #fff;
-  border: 4px solid #9a93b7;
-  box-shadow: 4px 4px 12px #221f31 inset;
   display: flex;
   flex-direction: column;
   position: relative;
+  background-clip: padding-box;
 }
 @media screen and (min-width: 801px) {
   article {
     width: 800px;
     margin: 10px auto 10px auto;
-    padding: 1em;
+    box-shadow: 0px 0px 20px #000;
   }
 }
 @media screen and (max-width: 800px) {
@@ -430,58 +457,65 @@ article section.header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 1em 1em 0.5em 1em;
   z-index: 20;
-  background-image: url("../images/purple_tile.png");
-  background-repeat: repeat;
-  animation: moving_background_reverse 5s linear infinite;
-  border: 12px solid transparent;
-  border-image: url("../images/vert_brackets_purple.png") 12 round;
-  margin: 20px;
+  background-color: #fff;
 }
 article section.header h2 {
-  color: #fff;
-  margin: 0, 0, 0.25em, 0.5em;
+  color: #221f31;
+  margin: 0;
   padding: 0.5em;
-  background-color: #000;
+  background-color: #fff;
   border: 1px solid #fff;
-  z-index: 50;
+  border: 1px solid #221f31;
 }
 article section.header p.byline {
   color: #fff;
   font-size: 0.75em;
   font-family: "Fira Mono", monospace;
-  margin: 0 1em 0 1em;
+  margin: 0;
   padding: 4px;
   background-color: #000;
-  border: 1px solid #fff;
-  z-index: 25;
-  transform: translateY(-6px);
-}
-article section.body {
-  transform: translateY(-6px);
-  background-color: #fff;
-  color: #fff;
   border: 12px solid transparent;
-  border-image: url("../images/horz_brackets.png") 12 round;
-  box-shadow: 2px 2px 10px #221f31 inset;
-  z-index: 15;
+  border-image: url("../images/horz_brackets_white.png") 12 round;
+}
+article div.body_wrapper {
+  background-image: url("../images/red_tile.png");
+  background-repeat: repeat;
+  animation: moving_background 9s linear infinite;
+  z-index: 25;
 }
 @media screen and (min-width: 801px) {
-  article section.body {
-    margin: 0 2em 1em 2em;
-    padding: 8px;
+  article div.body_wrapper {
+    margin: 0 auto 1em auto;
   }
 }
 @media screen and (max-width: 800px) {
-  article section.body {
-    margin: 4px 12px 4px 12px;
+  article div.body_wrapper {
+    margin: 0px auto 0px auto;
     padding: 4px;
   }
 }
-article section.body p {
+article div.body_wrapper section.body {
+  max-width: 600px;
+  padding: 12px;
+  border: 1px solid #000;
+  background-color: #fff;
+  color: #fff;
+  z-index: 25;
+}
+@media screen and (min-width: 801px) {
+  article div.body_wrapper section.body {
+    transform: translate(-8px, -8px);
+  }
+}
+@media screen and (max-width: 800px) {
+  article div.body_wrapper section.body {
+    transform: translate(-6px, -6px);
+  }
+}
+article div.body_wrapper section.body p {
   margin: 0 0 12px 0;
-  text-align: justify;
+  text-align: left;
 }
 article.single {
   left: 0;
@@ -598,17 +632,29 @@ article.cms {
 article.portfolio {
   margin: 1em auto 1em auto;
   width: 90%;
-  border: 24px solid transparent;
-  border-image: url("../images/border_red.png") 24 stretch;
   right: 0;
   left: 0;
   padding: 0;
+  border: 4px solid #fff;
+  box-shadow: 0px 0px 20px #000;
   background-image: url("../images/red_tile.png");
   background-repeat: repeat;
   animation: moving_background 5s linear infinite;
+  border: 12px solid transparent;
+  border-image: url("../images/border_red.png") 12 round;
 }
 article.portfolio article.list section {
   width: 100%;
+}
+
+article.multi {
+  border: 12px solid transparent;
+  border-image: url("../images/border_transparent.png") 12 round;
+}
+@media screen and (max-width: 800px) {
+  article.multi {
+    border: 1px solid #000;
+  }
 }
 
 footer {
@@ -616,6 +662,7 @@ footer {
   text-align: center;
   position: relative;
   bottom: 0;
+  left: 0;
   width: 100%;
   margin-top: 2em;
 }
@@ -706,8 +753,4 @@ form.add_content {
 html {
   color: #000;
   background-color: #fff;
-}
-
-* {
-  background-clip: padding-box;
 }
